@@ -5,7 +5,6 @@ import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import ec.edu.epn.petclinic.model.NamedEntity;
 import ec.edu.epn.petclinic.model.Person;
@@ -37,12 +36,13 @@ public class Vet extends Person {
 		return this.specialties;
 	}
 
-	@XmlElement
-	public List<Specialty> getSpecialties() {
-		return getSpecialtiesInternal().stream()
-			.sorted(Comparator.comparing(NamedEntity::getName))
-			.collect(Collectors.toList());
-	}
+    @XmlElement
+    public List<Specialty> getSpecialties() {
+        return getSpecialtiesInternal().stream()
+                .sorted(Comparator.comparing(NamedEntity::getName))
+                // SOLUCIÓN: Reemplazamos .collect(Collectors.toList()) por .toList()
+                .toList();
+    }
 
 	public int getNrOfSpecialties() {
 		return getSpecialtiesInternal().size();
